--- a/.devcontainer/environment/standard/pyproject.toml
+++ b/.devcontainer/environment/standard/pyproject.toml
@@ -44,6 +44,8 @@ mplfinance = "^0.12.10b0"
 xgboost = "^2.0.3"
 schedule = "^1.2.1"
 pypdf = "^4.1.0"
+feedparser = "^6.0.11"
+newspaper3k = "^0.2.8"
 
 
 [[tool.poetry.source]]
