--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  llama2:
+  Finance:
     ports: 
       - "8090:80"
     build:
@@ -10,7 +10,7 @@ services:
       args:
         - HTTP_PROXY=${HTTP_PROXY}
         - HTTPS_PROXY=${HTTPS_PROXY}
-    container_name: standard_container1
+    container_name: Finance-Model-Research
     environment:
       - http_proxy=$HTTP_PROXY
       - https_proxy=$HTTPS_PROXY
