pyproject.tomlにyfinanceの依存関係を追加しました ライブラリアップデート

--- a/.devcontainer/environment/standard/pyproject.toml
+++ b/.devcontainer/environment/standard/pyproject.toml
@@ -46,6 +46,7 @@ schedule = "^1.2.1"
 pypdf = "^4.1.0"
 feedparser = "^6.0.11"
 newspaper3k = "^0.2.8"
+yfinance = "^0.2.37"
 
 
 [[tool.poetry.source]]
