--- a/.devcontainer/environment/standard/pyproject.toml
+++ b/.devcontainer/environment/standard/pyproject.toml
@@ -48,6 +48,7 @@ feedparser = "^6.0.11"
 newspaper3k = "^0.2.8"
 yfinance = "^0.2.37"
 yahoo-finance-api2 = "^0.0.12"
+japanize-matplotlib = "^1.1.3"
 
 
 [[tool.poetry.source]]
