--- a/.devcontainer/environment/standard/pyproject.toml
+++ b/.devcontainer/environment/standard/pyproject.toml
@@ -49,6 +49,7 @@ newspaper3k = "^0.2.8"
 yfinance = "^0.2.37"
 yahoo-finance-api2 = "^0.0.12"
 japanize-matplotlib = "^1.1.3"
+ccxt = "^4.2.95"
 
 
 [[tool.poetry.source]]
