--- a/.devcontainer/environment/standard/pyproject.toml
+++ b/.devcontainer/environment/standard/pyproject.toml
@@ -47,6 +47,10 @@ pypdf = "^4.1.0"
 feedparser = "^6.0.11"
 newspaper3k = "^0.2.8"
 yfinance = "^0.2.37"
+ta-lib = "^0.4.28"
+tensorflow = "^2.16.1"
+keras = "^3.3.2"
+optuna = "^3.6.1"
 
 
 [[tool.poetry.source]]
@@ -57,3 +61,5 @@ priority = "explicit"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
