--- a/.devcontainer/environment/standard/pyproject.toml
+++ b/.devcontainer/environment/standard/pyproject.toml
@@ -47,16 +47,14 @@ pypdf = "^4.1.0"
 feedparser = "^6.0.11"
 newspaper3k = "^0.2.8"
 yfinance = "^0.2.37"
-<<<<<<< HEAD
 yahoo-finance-api2 = "^0.0.12"
 japanize-matplotlib = "^1.1.3"
 ccxt = "^4.2.95"
-=======
 ta-lib = "^0.4.28"
 tensorflow = "^2.16.1"
 keras = "^3.3.2"
 optuna = "^3.6.1"
->>>>>>> main
+statsmodels = "^0.14.2"
 
 
 [[tool.poetry.source]]
