--- a/.devcontainer/environment/standard/pyproject.toml
+++ b/.devcontainer/environment/standard/pyproject.toml
@@ -55,6 +55,7 @@ tensorflow = "^2.16.1"
 keras = "^3.3.2"
 optuna = "^3.6.1"
 statsmodels = "^0.14.2"
+optuna-dashboard = "^0.15.1"
 
 
 [[tool.poetry.source]]
