chore: Ignore model.safetensors for AspectBertModel in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,6 @@ RawData/
 crypto/models/*
 db.sqlite3
 research/SentimentBertModel/model.safetensors
-
+research/AspectBertModel/model.safetensors
 
 
