--- a/.devcontainer/environment/standard/pyproject.toml
+++ b/.devcontainer/environment/standard/pyproject.toml
@@ -59,6 +59,8 @@ optuna-dashboard = "^0.15.1"
 catboost = "^1.2.5"
 fugashi = "^1.3.2"
 ipadic = "^1.0.0"
+openai = "^1.34.0"
+dirtyjson = "^1.0.8"
 
 
 [[tool.poetry.source]]
