--- a/.devcontainer/environment/MoriMori/dockerfile
+++ b/.devcontainer/environment/MoriMori/dockerfile
@@ -10,6 +10,7 @@ ENV https_proxy=$HTTPS_PROXY
 
 RUN mkdir -p /root/src
 
+
 WORKDIR /root/src
 
 # RUN curl -sSL https://install.python-poetry.org | python -
@@ -17,7 +18,17 @@ WORKDIR /root/src
 # WORKDIR /root/src/.devcontainer/environment/chroma/
 # RUN poetry install 
 
-RUN apt-get update && apt-get install -y zip unzip git curl tmux valgrind
+#add rust
+RUN apt-get update && apt-get install -y \
+    zip \
+    unzip \
+    git \
+    curl \
+    tmux \
+    valgrind \
+    libssl-dev \
+    pkg-config
+
 RUN curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | bash && apt-get install git-lfs && git lfs install
 
 
@@ -31,14 +42,25 @@ RUN poetry config virtualenvs.create false
 ENV LD_LIBRARY_PATH /usr/local/cuda/lib64:${LD_LIBRARY_PATH}
 
 # TA-Libのビルドとインストール
-RUN tar -xzf /root/src/ta-lib-0.4.0-src.tar.gz && \
+# TA-Libのインストール
+COPY ta-lib-0.4.0-src.tar.gz /root/src/
+RUN tar -xzf ta-lib-0.4.0-src.tar.gz && \
     cd ta-lib && \
     ./configure --prefix=/usr && \
     make && \
     make install && \
     cd .. && \
-    rm -rf ta-lib
+    rm -rf ta-lib ta-lib-0.4.0-src.tar.gz
 
 
 
+# Rustのインストール
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+ENV PATH="/root/.cargo/bin:${PATH}"
 
+# Rustツールチェーンをセットアップ
+RUN rustup default stable && \
+    rustup component add rustfmt clippy
+
+# 基本的なRust開発ツールをインストール
+RUN cargo install cargo-edit cargo-watch
